Update JDK to 17 & add maven surefire plugin